# omlx

./: pyproject.toml
.github/workflows/: ci.yml
Formula/: omlx.rb
apps/omlx-mac/Resources/: Localizable.xcstrings
apps/omlx-mac/Sources/App/: AppDelegate.swift
apps/omlx-mac/Sources/AppView/Screens/: IntegrationsScreen.swift  ModelSettingsScreen.swift  ProfileViews.swift  ProfileWorkingState.swift
apps/omlx-mac/Sources/Menubar/: MenubarController.swift  MenubarVisibilityWatcher.swift
apps/omlx-mac/Sources/Net/DTO/: ModelsDTO.swift
apps/omlx-mac/Sources/Welcome/: WelcomeWindow.swift
apps/omlx-mac/Tests/oMLXTests/: MenubarControllerPortTests.swift  ModelSettingsScreenVMTests.swift  WelcomeViewModelTests.swift
apps/omlx-mac/oMLX.xcodeproj/: project.pbxproj
omlx/: _version.py  cli.py  engine_core.py  engine_pool.py  memory_monitor.py  model_discovery.py  model_settings.py  oq.py  output_collector.py  process_memory_enforcer.py  process_title.py  request.py  scheduler.py  server.py  server_metrics.py  settings.py  turboquant_kv.py
omlx/adapter/: gemma4.py  harmony.py  output_parser.py
omlx/admin/: auth.py  benchmark.py  oq_manager.py  routes.py
omlx/admin/i18n/: en.json  es.json  fr.json  ja.json  ko.json  ru.json  zh-TW.json  zh.json
omlx/admin/static/js/: dashboard.js
omlx/admin/templates/: base.html  chat.html
omlx/admin/templates/dashboard/: _bench.html  _modal_model_settings.html  _models.html  _settings.html  _status.html
omlx/api/: anthropic_utils.py  audio_models.py  audio_routes.py  markitdown.py  openai_models.py  responses_utils.py  tool_calling.py  utils.py
omlx/cache/: factory.py  paged_ssd_cache.py  prefix_cache.py  stats.py  type_registry.py
omlx/engine/: base.py  batched.py  dflash.py  embedding.py  stt.py  tts.py  vlm.py
omlx/integrations/: __init__.py  codex.py  codex_app.py
omlx/models/: embedding.py  reranker.py  vlm.py  xlm_roberta.py
omlx/patches/: dflash_qwen_compat.py  llama4_attention.py  mlx_audio_compat.py  mlx_vlm_diffusion.py
omlx/patches/deepseek_v4/: cache_extras.py  deepseek_v4_model.py
omlx/patches/mlx_lm_mtp/: __init__.py  batch_generator.py  cache_rollback.py  deepseek_v4_model.py  qwen35_model.py
omlx/patches/mlx_vlm_mtp/: qwen35_moe_vlm_runtime.py  qwen35_vlm_runtime.py
omlx/speculative/: vlm_mtp.py
omlx/utils/: fatal.py  hardware.py  model_loading.py  network.py  tokenizer.py
packaging/: README.md
tests/: test_active_models_visibility.py  test_admin_api_key.py  test_admin_hot_cache_clear.py  test_admin_profiles_api.py  test_admin_server_aliases.py  test_anthropic_adapter.py  test_anthropic_models.py  test_api_auth.py  test_api_utils.py  test_audio_discovery.py  test_audio_stt.py  test_audio_tts.py  test_benchmark.py  test_benchmark_sse_replay.py  test_cli.py  test_context_window.py  test_deepseek_v4_patch.py  test_dflash_engine.py  test_dflash_prefill_memory_guard.py  test_dflash_qwen_compat.py  test_embedding.py  test_engine_core.py  test_engine_pool.py  test_engine_preflight.py  test_fatal.py  test_gemma4_messages.py  test_grammar.py  test_harmony.py  test_harmony_parser.py  test_hot_cache.py  test_integrations.py  test_llama4_attention_patch.py  test_markitdown_integration.py  test_memory_monitor.py  test_memory_monitor_vlm_config.py  test_mlx_lm_mtp_patch.py  test_mlx_vlm_diffusion_patch.py  test_model_discovery.py  test_model_loading.py  test_model_settings.py  (+32 more)
tests/integration/: test_server_endpoints.py
